--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
     "firebase": "^10.5.2",
     "register-service-worker": "^1.7.2",
