--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
     "firebase": "^10.5.2",
+    "pinia": "^2.1.7",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
