--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "array-union": "^3.0.1",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
