--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "firebase": "^10.5.2",
     "pinia": "^2.1.7",
+    "pinia-plugin-persist": "^1.0.0",
     "pinia-plugin-persistedstate": "^3.2.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
