--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "array-union": "^3.0.1",
+    "babel-jest": "^29.7.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "core-js": "^3.8.3",
@@ -29,6 +30,7 @@
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.4.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   }
