--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,13 @@
   "theme_color":"#000000",
   "icons":[
       {
-        "src":"./img/icons/pwa-192x192.png",
-        "sizes":"192x192","type":"image/png" 
+        "src":"./img/icons/pwa-72x72.png", "sizes":"72x72","type":"image/png" 
+      },
+      {
+        "src":"./img/icons/pwa-96x96.png", "sizes":"96x96","type":"image/png" 
+      },
+      {
+        "src":"./img/icons/pwa-192x192.png", "sizes":"192x192","type":"image/png" 
       },
       { 
         "src":"./img/icons/pwa-512x512.png","sizes":"512x512","type":"image/png"
