--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,42 @@
 {
-  "name":"TicketService",
-  "short_name":"TicketService",
-  "theme_color":"#000000",
-  "icons":[
-      {
-        "src":"./img/icons/pwa-72x72.png", "sizes":"72x72","type":"image/png" 
-      },
-      {
-        "src":"./img/icons/pwa-96x96.png", "sizes":"96x96","type":"image/png" 
-      },
-      {
-        "src":"./img/icons/pwa-192x192.png", "sizes":"192x192","type":"image/png" 
-      },
-      { 
-        "src":"./img/icons/pwa-512x512.png","sizes":"512x512","type":"image/png"
-      },
-      { 
-        "src":"./img/icons/android-chrome-maskable-192x192.png","sizes":"192x192","type":"image/png","purpose":"maskable"
-      },
-      { 
-        "src":"./img/icons/android-chrome-maskable-512x512.png","sizes":"512x512","type":"image/png","purpose":"maskable" 
-      }
-    ],
-    "start_url":".",
-    "display":"standalone",
-    "background_color":"#000000"}
+  "name": "TicketService",
+  "short_name": "TicketService",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "./img/icons/pwa-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/icons/pwa-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/icons/pwa-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/icons/pwa-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/icons/pwa-192x192-maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "./img/icons/pwa-512x512-maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#000000"
+}
