--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,16 @@
   "theme_color": "#000000",
   "icons": [
     {
+      "src": "./img/icons/favicon-16x16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/icons/favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
       "src": "./img/icons/pwa-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
